[package]
name = "reqwest-middleware-cache"
description = "A caching middleware for reqwest"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>", "Christian Haynes <06chaynes@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/06chaynes/reqwest-middleware-cache"
homepage = "https://github.com/06chaynes/reqwest-middleware-cache"
readme = "README.md"
keywords = ["cache", "reqwest", "middleware"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = { version = "1.3", optional = true }
cacache = { version = "9.0", optional = true }
http = "0.2"
httpdate = "1.0"
http-cache-semantics = { version = "0.9", features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false }
reqwest-middleware = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
task-local-extensions = "0.1"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "0.30"

[features]
default = ["manager-cacache"]
manager-cacache = ["cacache", "serde", "bincode"]
